--- a/action.yaml
+++ b/action.yaml
@@ -1,4 +1,4 @@
-name: 'Keep a changelog with git-chglog'
+name: 'Changelog with git-chglog'
 description: 'Generate a changelog using semver commits using the git-chlog tool'
 branding:
   icon: 'calendar'  
